--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -9,7 +9,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
 img {
-    box-shadow: 5px 5px 5px grey;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 a {
